# Ros2_learn

./: CMakeLists.txt  README.md  novel1.txt  novel2.txt  novel3.txt  ros2.md  ros2_muban.md
node/: learn_args.cpp  python节点模板.py
node/chapt1/: CMakeList.txt  CMakeLists.txt
node/chapt2/: CMakeLists.txt.back  ros2_cpp_node.cpp  ros2_python_node.py
node/chapt2/chapt2.4/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
node/chapt2/chapt2.4/chapt2_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_auto  learn_auto.cpp  learn_funcational  learn_funcational.cpp  learn_lambda  learn_lambda.cpp  learn_shared  learn_shared.cpp  learn_thread.cpp  person_node.cpp
node/chapt2/chapt2.4/chapt2_ws/src/demo_python_pkg/: package.xml  setup.py
node/chapt2/chapt2.4/chapt2_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  person_node.py  python_node.py  writer_node.py
node/chapt3/: novel1.txt
node/chapt3/topic_practice_ws/: .gitignore
node/chapt3/topic_practice_ws/install/: local_setup.sh  setup.sh
node/chapt3/topic_practice_ws/install/py_status_publisher/lib/py_status_publisher/: sys_status_pub
node/chapt3/topic_practice_ws/install/py_status_publisher/share/py_status_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
node/chapt3/topic_practice_ws/install/status_display/share/status_display/: local_setup.sh  package.sh
node/chapt3/topic_practice_ws/install/status_interfaces/share/status_interfaces/: local_setup.sh  package.sh
node/chapt3/topic_practice_ws/log/: latest_build
node/chapt3/topic_practice_ws/src/py_status_publisher/: setup.cfg  setup.py
node/chapt3/topic_practice_ws/src/py_status_publisher/py_status_publisher/: sys_status_pub.py
node/chapt3/topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
node/chapt3/topic_practice_ws/src/status_display/src/: hello_qt.cpp
node/chapt3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt
node/chapt3/topic_practice_ws/src/status_interfaces/msg/: SystemStatus.msg
node/chapt3/topic_practice_ws/src/sys_status_display/: CMakeLists.txt
node/chapt3/topic_practice_ws/src/sys_status_display/src/: status_display.cpp
node/chapt3/topic_ws/install/: local_setup.sh  setup.sh
node/chapt3/topic_ws/log/: latest_build
node/chapt3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt
node/chapt3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
node/chapt3/topic_ws/src/demo_python_topic/: package.xml  setup.py
node/chapt3/topic_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
node/chapt4/: 第四章：服务通信和参数通信 -- 深入ROS2通信.md
node/chapt4/face_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
node/chapt4/face_ws/src/custom_interfaces/srv/: FaceDetector.srv  Patrol.srv
node/chapt4/face_ws/src/demo_cpp_service/: CMakeLists.txt
node/chapt4/face_ws/src/demo_cpp_service/launch/: actions.launch.py  demo.launch.py
node/chapt4/face_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
node/chapt4/face_ws/src/demo_python_service/: package.xml  setup.py
node/chapt4/face_ws/src/demo_python_service/demo_python_service/: face_detect_client.py  face_detect_service.py  learn_face_detect.py
node/chapt4/face_ws/src/demo_python_service/launch/: demo.launch.py
node/chapt5/TF_ws/src/demo_cpp_tf/: CMakeLists.txt
node/chapt5/TF_ws/src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
node/chapt5/TF_ws/src/demo_python_tf/: setup.py
node/chapt5/TF_ws/src/demo_python_tf/demo_python_tf/: dynamic_tf_broadcaster.py  static_tf_broadcast.py  tf_listener.py
node/chapt6/chapt6_ws/: .gitignore
node/chapt6/chapt6_ws/src/urdf_fishbot/: CMakeLists.txt
(+13 files in other folders)
